fixed spacing

--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -28,9 +28,6 @@
     .register-form{
         padding: 10rem;
     }
-    .register-form div{
-        justify-content: space-around;
-    }
 
     .submit-registration-form{
         font-size: 20pt;
@@ -46,10 +43,10 @@
     .register-form label, .register-form input{
         font-size: 20pt;
         padding: 10px;
-        width: 40%;
+        width: 40;
     }
 
     .submit-registration-form{
-        width: 15%
+        width: 20%
     }
 }
